--- a/package.json
+++ b/package.json
@@ -143,6 +143,8 @@
         "flexlayout-react": "0.7.15",
         "fourier-transform": "1.1.2",
         "fs-extra": "6.0.1",
+        "i18next": "^24.2.3",
+        "i18next-browser-languagedetector": "^8.0.4",
         "immutability-helper": "3.1.1",
         "jquery": "3.7.1",
         "jsmodbus": "4.0.10",
@@ -167,6 +169,7 @@
         "quill": "1.3.7",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "react-i18next": "^15.4.1",
         "react-select": "5.8.2",
         "react-toastify": "10.0.6",
         "react-virtualized-auto-sizer": "1.0.24",
