--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
         "fs-extra": "6.0.1",
         "i18next": "^24.2.3",
         "i18next-browser-languagedetector": "^8.0.4",
+        "i18next-fs-backend": "^2.6.0",
         "immutability-helper": "3.1.1",
         "jquery": "3.7.1",
         "jsmodbus": "4.0.10",
