--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,5 +116,6 @@
         "packages/eez-studio-shared/i18n",
         "libs/pdfjs/web/locale",
         "packages/eez-studio-shared/i18n/locales"
-    ]
+    ],
+    "i18n-ally.displayLanguage": "zh-CN"
 }
